--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,3 +13,4 @@ compatibility_date = "2023-05-26"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
 UUID = "ed011060-0cb3-4882-b89b-61d80b877194"
+PROXYIP = "98.98.118.82"
